# kafka-streaming-demo

./: .gitignore  README.md
dashboard/: mix.exs  word_counts
dashboard/config/: config.exs  dev.exs
dashboard/lib/dashboard/: application.ex
dashboard/lib/dashboard_web/: endpoint.ex
dashboard/lib/dashboard_web/live/: page_live.ex  page_live.html.leex
dashboard/lib/page_processor/: page_processor.ex
scraper/: pyproject.toml
scraper/scraper/: settings.py
scraper/scraper/spiders/: pagetext_spider.py
